test/Harper/Tests/Bad/ConflictingDeclarationsWithinAPattern.har
value Bag a b c d = {
  data = {
    a :: a; b :: b; c :: c; d :: d;
  }
};

f :: Bag Integer Integer Integer Integer -> Integer;
f b = match b {
  Bag { b : (n :: Integer), d : (n :: Integer) } => n
};

main :: Integer;
main = {
  (bag :: Bag Integer Integer Integer Integer) = val Bag { a = 1, b = 2, c = 3, d = 4 };
  return f bag;
};